--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Heidegger index</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital@0;1&display=swap');
       body {
         font-family: 'Crimson Text', serif;
         margin: 0;
