--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -30,33 +30,34 @@
   </head>
   <body>
     <div class="container">
-    <h1>Heidegger index</h1>
-    {% for lemma in lemmas %}
-      <h3 class="lemma-header">
-        {{ lemma }}
-        {% if lemma.type %}({{ lemma.get_type_display }}){% endif %}
-      </h3>
-      <ul class="lemma-refs">
-      {% regroup lemma.pagereference_set.all by work as work_list %}
-      {% for work in work_list %}
-        <li>{{ work.grouper }}:
-          {% for page_ref in work.list %}
-          {{ page_ref }}{% if not forloop.last %},{% endif %}
-          {% endfor %}
-        </li>
+      <h1>Heidegger index</h1>
+      {% for lemma in lemmas %}
+        <h3 class="lemma-header">
+          {{ lemma }}
+          {% if lemma.type %}({{ lemma.get_type_display }}){% endif %}
+        </h3>
+        <ul class="lemma-refs">
+        {% regroup lemma.pagereference_set.all by work as work_list %}
+        {% for work in work_list %}
+          <li>{{ work.grouper }}:
+            {% for page_ref in work.list %}
+            {{ page_ref }}{% if not forloop.last %},{% endif %}
+            {% endfor %}
+          </li>
+        {% endfor %}
+        </ul>
       {% endfor %}
-      </ul>
-    {% endfor %}
-    <h2 style="margin-top: 100px;">Bibliography</h2>
-    <table style="border-spacing: 1rem 10px;">
-      {% for work in works %}
-      {% if work.reference %}
-      <tr>
-        <td style="white-space: nowrap; vertical-align: top;">{{ work.id }}</td>
-        <td>{{ work.reference|safe }}</td>
-      </tr>
-      {% endif %}
-      {% endfor %}
+      <h2 style="margin-top: 100px;">Bibliography</h2>
+      <table style="border-spacing: 1rem 10px;">
+        {% for work in works %}
+        {% if work.reference %}
+        <tr>
+          <td style="white-space: nowrap; vertical-align: top;">{{ work.id }}</td>
+          <td>{{ work.reference|safe }}</td>
+        </tr>
+        {% endif %}
+        {% endfor %}
+      </table>
     </div>
   </body>
 </html>
