--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -31,21 +31,22 @@
   <body>
     <div class="container">
       <h1>Heidegger index</h1>
+      <p style="font-style: italic;">Managed by: André van Delft & Johannes de Wit</p>
       {% for lemma in lemmas %}
-        <h3 class="lemma-header">
-          {{ lemma }}
-          {% if lemma.type %}({{ lemma.get_type_display }}){% endif %}
-        </h3>
-        <ul class="lemma-refs">
-        {% regroup lemma.pagereference_set.all by work as work_list %}
-        {% for work in work_list %}
-          <li>{{ work.grouper }}:
-            {% for page_ref in work.list %}
-            {{ page_ref }}{% if not forloop.last %},{% endif %}
-            {% endfor %}
-          </li>
-        {% endfor %}
-        </ul>
+      <h3 class="lemma-header">
+        {{ lemma }}
+        {% if lemma.type %}({{ lemma.get_type_display }}){% endif %}
+      </h3>
+      <ul class="lemma-refs">
+      {% regroup lemma.pagereference_set.all by work as work_list %}
+      {% for work in work_list %}
+        <li>{{ work.grouper }}:
+          {% for page_ref in work.list %}
+          {{ page_ref }}{% if not forloop.last %},{% endif %}
+          {% endfor %}
+        </li>
+      {% endfor %}
+      </ul>
       {% endfor %}
       <h2 style="margin-top: 100px;">Bibliography</h2>
       <table style="border-spacing: 1rem 10px;">
