--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -5,9 +5,10 @@
     <title>Heidegger index</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Crimson Text', serif;
+        font-family: 'Crimson Text', 'Alegreya', serif;
         margin: 0;
         font-size: 18px;
       }
