--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -13,13 +13,11 @@
 {% for work in work_list %}
   <li>
     {% if work.grouper.id in work_ids %}
-      <a href="{% url 'work-detail' work.grouper.slug %}">{{work.grouper}}</a>
+      <a href="{% url 'work-detail' work.grouper.slug %}">{{work.grouper}}</a>:
     {% else %}
       {{ work.grouper }}:
     {% endif %}
-    {% for page_ref in work.list %}
-    {{ page_ref }}{% if not forloop.last %},{% endif %}
-    {% endfor %}
+    {{ work.list|join:', ' }}
   </li>
 {% endfor %}
 </ul>
