--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -9,17 +9,17 @@
   {% if lemma.type %}({{ lemma.get_type_display }}){% endif %}
 </h3>
 <ul class="lemma-refs">
-{% regroup lemma.pagereference_set.all by work as work_list %}
-{% for work in work_list %}
-  <li>
-    {% if work.grouper.id in work_ids %}
-      <a href="{% url 'work-detail' work.grouper.slug %}">{{work.grouper}}</a>:
-    {% else %}
-      {{ work.grouper }}:
-    {% endif %}
-    {{ work.list|join:', ' }}
-  </li>
-{% endfor %}
+  {% regroup lemma.pagereference_set.all by work as work_list %}
+  {% for work, page_ref_list in work_list %}
+    <li>
+      {% if work.id in work_ids %}
+        <a href="{% url 'work-detail' work.slug %}">{{work}}</a>:
+      {% else %}
+        {{ work }}:
+      {% endif %}
+      {{ page_ref_list|join:', ' }}
+    </li>
+  {% endfor %}
 </ul>
 {% endfor %}
 <div class="bibliography">
