--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -5,7 +5,7 @@
 <p class="description">Managed by: <a href="https://github.com/andredelft" target="_blank" rel="noopener noreferrer">André van Delft</a> &amp; <a href="https://github.com/johannesdewit" target="_blank" rel="noopener noreferrer">Johannes de Wit</a></p>
 {% for lemma in lemmas %}
 <h3 class="lemma-header">
-  <a href="{% url 'lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format }}</a>
+  <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format }}</a>
 </h3>
 {% include '_page_ref_list.html' with page_refs=lemma.pagereference_set.all only %}
 {% endfor %}
@@ -14,7 +14,7 @@
   <div class="bibliography-wrapper">
     {% for work in works %}
     {% if work.reference %}
-    <a class="entry-wrapper hidden-link button" href="{% url 'work-detail' work.slug %}">
+    <a class="entry-wrapper hidden-link button" href="{% url 'index:work-detail' work.slug %}">
       <div class="entry-label">{{ work.id }}</div>
       {{ work.reference|safe }}
     </a>
