--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -1,7 +1,7 @@
 {% extends '_site_base.html' %}
 
 {% block body %}
-<a class="breadcrumb button" href="{% url 'home' %}">Home</a>
+<a class="breadcrumb button" href="{% url 'index:home' %}">Home</a>
 <h1>{{ lemma.value }}</h1>
 {% include '_page_ref_list.html' with page_refs=lemma.pagereference_set.all verbose_titles=True only %}
 {% endblock body %}
