Changed work_detail.html to display terms sorted by lemma type

--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -12,9 +12,31 @@
 {% regroup page_refs by lemma as lemma_list %}
 <ul class="lemma-refs">
   {% for lemma, page_ref_list in lemma_list %}
-    <li>
-      <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format }}</a>: {{ page_ref_list|join:', ' }}
-    </li>
+    {% if not lemma.type %}
+      <li>
+        <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format }}</a>: {{ page_ref_list|join:', ' }}
+      </li>
+    {% endif %}
+  {% endfor %}
+</ul>
+<h2>People mentioned</h2>
+<ul class="lemma-refs">
+  {% for lemma, page_ref_list in lemma_list %}
+    {% if lemma.type == 'p' %}
+      <li>
+        <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format }}</a>: {{ page_ref_list|join:', ' }}
+      </li>
+    {% endif %}
+  {% endfor %}
+</ul>
+<h2>Works mentioned</h2>
+<ul class="lemma-refs">
+  {% for lemma, page_ref_list in lemma_list %}
+    {% if lemma.type == 'w' %}
+      <li>
+        <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format }}</a>: {{ page_ref_list|join:', ' }}
+      </li>
+    {% endif %}
   {% endfor %}
 </ul>
 {% endif %}
