--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -13,7 +13,6 @@
       unicode-range: U+0370-03FF, U+1D00-1D7F, U+1D80-1DBF, U+1F00-1FFF, U+2100-214F,
         U+AB30-AB6F, U+10140-1018F, U+10190-101CF, U+1D200-1D24F;
     }
-    
     @font-face {
       font-family: "Greek";
       src: url("{% static 'fonts/alegreya.ttf' %}");
@@ -32,7 +31,11 @@
     }
     </style>
   </head>
-  <body class="font-serif">
+  <body class="font-serif bg-slate-50">
+    {% block container %}
+    <div class="max-w-prose px-4 mx-auto text-2xl leading-relaxed py-24">
     {% block body %}{% endblock %}
+    </div>
+    {% endblock container %}
   </body>
 </html>
