--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -1,9 +1,14 @@
 {% extends '_site_base.html' %}
 
 {% block body %}
-<a class="breadcrumb button" href="{% url 'index:home' %}">Home</a>
-<h1>{{ lemma.value }}</h1>
-{% if lemma.description %}{{ lemma.description | safe }}{% endif %}
+<a href="{% url 'index:home' %}">Home</a>
+<h1 class="text-5xl font-semibold py-8">{{ lemma.value }}</h1>
+{% if lemma.description %}
+<div class="prose prose-2xl prose-slate prose-blockquote:not-italic
+prose-blockquote:text-[0.9em] prose-blockquote:leading-normal">
+  {{ lemma.description | safe }}
+</div>
+{% endif %}
 {% include '_page_ref_list.html' with page_refs=lemma.pagereference_set.all verbose_titles=True only %}
 {% if similar_lemmata %}
   <h2>Similar lemmata</h2>
