--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -3,9 +3,9 @@
 {% block body %}
 {% if work.csl_json %}
 <div>
-  <a class="breadcrumb button" href="{% url 'index:home' %}">Home</a>
+  <a href="{% url 'index:home' %}">Home</a>
 </div>
-<h1>{{ work.csl_json.title }}</h1>
+<h1 class="font-bold text-5xl py-4">{{ work.csl_json.title }}</h1>
 <h2>Reference</h2>
 <p>{{ work.reference | safe }}</p>
 {% if work_lemma %}
@@ -14,33 +14,33 @@
 {% endif %}
 <h2>Index terms</h2>
 {% regroup page_refs by lemma as lemma_list %}
-<ul class="lemma-refs">
+<ul>
   {% for lemma, page_ref_list in lemma_list %}
     {% if not lemma.type %}
       <li>
-        <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format_just_lemma }}</a>: {{ page_ref_list|join:', ' }}
+        <a href="{% url 'index:lemma-detail' lemma.slug %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
       </li>
     {% endif %}
   {% endfor %}
 </ul>
 {% if person_list %}
   <h3>People mentioned</h3>
-  <ul class="lemma-refs">
+  <ul>
     {% regroup person_list by lemma as person_list %}
     {% for lemma, page_ref_list in person_list %}
       <li>
-        <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format_just_lemma }}</a>: {{ page_ref_list|join:', ' }}
+        <a href="{% url 'index:lemma-detail' lemma.slug %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
       </li>
     {% endfor %}
   </ul>
 {% endif %}
 {% if work_list %}
   <h3>Works mentioned</h3>
-  <ul class="lemma-refs">
+  <ul>
     {% regroup work_list by lemma as work_list %}
     {% for lemma, page_ref_list in work_list %}
       <li>
-        <a href="{% url 'index:lemma-detail' lemma.slug %}" class="hidden-link">{{ lemma.format_just_lemma }}</a>: {{ page_ref_list|join:', ' }}
+        <a href="{% url 'index:lemma-detail' lemma.slug %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
       </li>
     {% endfor %}
   </ul>
