--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -1,21 +1,21 @@
 {% extends '_site_base.html' %}
 
 {% block body %}
-<a href="{% url 'index:home' %}">Home</a>
-<h1 class="text-5xl font-semibold py-8">{{ lemma.value }}</h1>
+{% include '_home_button.html' %}
+<h1 class="py-8 text-5xl font-semibold dark:text-white">{{ lemma.value }}</h1>
 {% if lemma.description %}
-<div class="prose prose-2xl prose-slate prose-blockquote:not-italic
-prose-blockquote:text-[0.9em] prose-blockquote:leading-normal">
+<div class="prose prose-2xl prose-slate dark:prose-invert prose-blockquote:not-italic
+prose-blockquote:text-[0.9em] prose-blockquote:leading-normal dark:prose-blockquote:border-l-slate-600">
   {{ lemma.description | safe }}
 </div>
 {% endif %}
-{% include '_page_ref_list.html' with page_refs=lemma.pagereference_set.all verbose_titles=True only %}
+{% include '_page_ref_list.html' with page_refs=lemma.pagereference_set.all %}
 {% if similar_lemmata %}
-  <h2>Similar lemmata</h2>
+  <h2 class="pl-4 text-xl">Similar lemmata</h2>
     <ul class="lemma-refs">
       {% for sim_lem in similar_lemmata %}
         <li>
-          <a href="{% url 'index:lemma-detail' sim_lem.slug %}" class="hidden-link">{{ sim_lem }}</a>
+          <a href="{% url 'index:lemma-detail' sim_lem.slug %}" class="{{ hidden_link_decoration }}">{{ sim_lem }}</a>
         </li>
       {% endfor %}
     </ul>
