--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -1,49 +1,20 @@
 {% extends '_site_base.html' %}
 
 {% block body %}
-{% if work.csl_json %}
-<div>
-  <a href="{% url 'index:home' %}">Home</a>
-</div>
-<h1 class="font-bold text-5xl py-4">{{ work.csl_json.title }}</h1>
-<h2>Reference</h2>
-<p>{{ work.reference | safe }}</p>
+{% include '_home_button.html' %}
+<h1 class="py-4 text-5xl font-bold dark:text-white">{{ work.csl_json.title }}</h1>
+<h2 class="mt-8 mb-4 text-3xl font-bold dark:text-white">Reference</h2>
+<div class="text-1.5xl {{ body_text }}">{{ work.reference | safe }}</div>
 {% if work_lemma %}
-  <h2>Mentions of <em>{{ work.csl_json.title }}</em></h2>
-  {% include '_page_ref_list.html' with page_refs=work_lemma verbose_titles=True only %}
+  <h2 class="">Mentions of <em>{{ work.csl_json.title }}</em></h2>
+  {% include '_page_ref_list.html' with page_refs=work_lemma %}
 {% endif %}
-<h2>Index terms</h2>
-{% regroup page_refs by lemma as lemma_list %}
-<ul>
-  {% for lemma, page_ref_list in lemma_list %}
-    {% if not lemma.type %}
-      <li>
-        <a href="{% url 'index:lemma-detail' lemma.slug %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
-      </li>
-    {% endif %}
-  {% endfor %}
-</ul>
+<h2 class="mt-8 mb-4 text-3xl font-bold dark:text-white">Index terms</h2>
+{% include '_lemma_list.html' with lemma_list=page_refs %}
 {% if person_list %}
-  <h3>People mentioned</h3>
-  <ul>
-    {% regroup person_list by lemma as person_list %}
-    {% for lemma, page_ref_list in person_list %}
-      <li>
-        <a href="{% url 'index:lemma-detail' lemma.slug %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
-      </li>
-    {% endfor %}
-  </ul>
+  {% include '_lemma_list.html' with lemma_list=person_list lemma_list_title="People mentioned" %}
 {% endif %}
 {% if work_list %}
-  <h3>Works mentioned</h3>
-  <ul>
-    {% regroup work_list by lemma as work_list %}
-    {% for lemma, page_ref_list in work_list %}
-      <li>
-        <a href="{% url 'index:lemma-detail' lemma.slug %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
-      </li>
-    {% endfor %}
-  </ul>
-{% endif %}
+  {% include '_lemma_list.html' with lemma_list=work_list lemma_list_title="Works mentioned" %}
 {% endif %}
 {% endblock %}
