--- a/heidegger_index/templates/_group_by_lemma.html
+++ b/heidegger_index/templates/_group_by_lemma.html
@@ -1,9 +1,9 @@
-{% if lemma_list_title %}
-  <h3 class="mt-4 mb-2 text-2xl font-bold dark:text-white">{{ lemma_list_title|safe }}</h3>
+{% if group_title %}
+  <h3 class="mt-4 mb-2 text-2xl font-bold dark:text-white">{{ group_title|safe }}</h3>
 {% endif %}
 <ul class="text-xl pl-4 {{ body_text }}">
-  {% regroup lemma_list by lemma as grouped_lemma_list %}
-  {% for lemma, page_ref_list in grouped_lemma_list %}
+  {% regroup ref_list by lemma as lemma_groups %}
+  {% for lemma, page_ref_list in lemma_groups %}
     <li class="pl-4 -indent-4">
       <a href="{% url 'index:lemma-detail' lemma.slug %}" class="{{ hidden_link_decoration_medium }}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
     </li>
