--- a/heidegger_index/templates/_group_by_work.html
+++ b/heidegger_index/templates/_group_by_work.html
@@ -1,16 +1,16 @@
-{% if page_ref_list_title %}
-  <h2 class="mt-8 mb-4 text-3xl font-bold dark:text-white">{{ page_ref_list_title|safe }}</h3>
+{% if group_title %}
+  <h2 class="mt-8 mb-4 text-3xl font-bold dark:text-white">{{ group_title|safe }}</h3>
 {% endif %}
 <ul class="pl-4 text-xl {{ body_text }}">
-  {% regroup page_refs by work as work_groups %}
-  {% for work, page_ref_list in work_groups %}
+  {% regroup ref_list by work as work_groups %}
+  {% for work, page_refs in work_groups %}
     <li class="pl-4 -indent-4">
       {% if work.reference %}
         <a href="{% url 'index:work-detail' work.slug %}" class="{{ hidden_link_decoration }}">{{ work }}</a>:
       {% else %}
         <span class="font-semibold text-black cursor-not-allowed dark:text-white" title="Reference not yet added">{{ work }}</span>:
       {% endif %}
-      {{ page_ref_list|join:', ' }}
+      {{ page_refs|join:', ' }}
     </li>
   {% endfor %}
 </ul>
