--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -15,7 +15,7 @@
   </head>
   <body class="font-serif transition-colors bg-slate-50 dark:bg-slate-700">
     {% block container %}
-    <div class="max-w-3xl px-4 py-24 mx-auto text-2xl leading-relaxed">
+    <div class="max-w-3xl px-4 py-12 mx-auto text-2xl leading-relaxed md:py-24">
     {% block body %}{% endblock %}
     </div>
     {% endblock container %}
