--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -7,8 +7,14 @@
 <div class="prose prose-2xl prose-slate dark:prose-invert prose-blockquote:not-italic prose-blockquote:text-[0.9em] prose-blockquote:leading-normal dark:prose-blockquote:border-l-slate-600 prose-a:decoration-sky-300">
   {{ lemma.description | safe }}
 </div>
+{% elif lemma.type == "w" and lemma.author %}
+<div class="prose prose-2xl prose-slate dark:prose-invert">
+  {{ lemma.value }} is a work by <a href="{% url 'index:lemma-detail' lemma.author.slug %}" class="{{ hidden_link_decoration }}">{{ lemma.author }}</a>
+</div>
 {% endif %}
 {% include '_group_by_work.html' with ref_list=lemma.pagereference_set.all %}
+
+{# Show chilren or works #}
 {% if children %}
   {% if lemma.type == "p" %}
     <h2 class="mt-16 mb-4 text-3xl font-bold dark:text-white">{{ lemma.value }} is the author of</h2>
@@ -21,6 +27,7 @@
     {% endfor %}
   </ul>
 {% endif %}
+
 {# Show related lemmata, if not defined, show similar lemmata. #}
 {% if related_lemmata %}
   <h2 class="mt-16 mb-4 text-3xl font-bold dark:text-white">Related lemmata</h2>
