Change home button

--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {% include '_home_button.html' %}
-<h1 class="py-8 text-5xl font-semibold dark:text-white">{{ lemma.value }}</h1>
+<h1 class="clear-right pb-8 text-5xl font-semibold dark:text-white">{{ lemma.value }}</h1>
 {% if lemma.description %}
 <div class="prose prose-2xl prose-slate dark:prose-invert prose-blockquote:not-italic prose-blockquote:text-[0.9em] prose-blockquote:leading-normal dark:prose-blockquote:border-l-slate-600 prose-a:decoration-sky-300">
   {{ lemma.description | safe }}
