--- a/heidegger_index/templates/_home_button.html
+++ b/heidegger_index/templates/_home_button.html
@@ -1,1 +1,7 @@
-<a href="{% url 'index:home' %}" class="text-3xl {{ link_decoration }}">Home</a>
+<div class="sticky z-10 float-right w-16 h-16 mb-4 ml-4 duration-300 rounded-full bg-slate-50 text-slate-700 top-6 drop-shadow-md dark:drop-shadow-lg dark:bg-slate-700 transition-color hover:bg-slate-200 dark:hover:bg-slate-600">
+  <a href="{% url 'index:home' %}" role="button" class="block p-2 transition-all duration-700 dark:text-slate-200">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-full h-full" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+    </svg>
+  </a>
+</div>
