--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -1,5 +1,7 @@
 {% extends '_site_base.html' %}
 
+{% block full_head_title %}Heidegger index{% endblock full_head_title %}
+
 {% block body %}
 <h1 class="py-4 text-5xl font-bold dark:text-white">Heidegger index</h1>
 <p class="pb-12 {{ body_text }}">
