--- a/heidegger_index/templates/_lemma_list.html
+++ b/heidegger_index/templates/_lemma_list.html
@@ -1,8 +1,12 @@
 {% if title %}
-<h2 class="mt-16 mb-4 text-3xl font-bold dark:text-white">{{ title }}</h2>
+<h2 class="mt-12 mb-4 text-3xl font-bold dark:text-white">{{ title }}</h2>
 {% endif %}
-<ul class="text-xl pl-4 {{ body_text }}">
+<ul class="text-1.5xl pl-4 {{ body_text }}">
   {% for lemma in lemma_list %}
-    <a href="{% url 'index:lemma-detail' lemma.slug %}" class="{{ hidden_link_decoration }}">{{ lemma }}</a>
+    <li>
+      <a href="{% url 'index:lemma-detail' lemma.slug %}" class="{{ hidden_link_decoration }}">
+        {{ lemma }}
+      </a>
+    </li>
   {% endfor %}
 </ul>
