Add 'jump to letter' with smooth scroll

--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" class="scroll-smooth">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block full_head_title %}{% block head_title %}{% endblock %} – Heidegger index{% endblock %}</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <style>
+      html {
+        --scroll-behavior: smooth;
+      }
+    </style>
     <link rel="stylesheet" href="{% static 'styles.css' %}"/>
     {% include "_fonts.html" %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+    <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
   </head>
   <body class="font-serif transition-colors bg-slate-50 dark:bg-slate-700">
     {% block container %}
