--- a/heidegger_index/templates/_home_button.html
+++ b/heidegger_index/templates/_home_button.html
@@ -1,7 +1,8 @@
-<div class="sticky z-10 float-right w-16 h-16 mb-4 ml-4 duration-300 rounded-full bg-slate-50 text-slate-700 top-6 drop-shadow-md dark:drop-shadow-lg dark:bg-slate-700 transition-color hover:bg-slate-200 dark:hover:bg-slate-600">
+<div class="sticky z-10 float-right w-16 h-16 mb-4 ml-4 duration-300 rounded-full bg-slate-50 text-slate-700 top-6 drop-shadow dark:drop-shadow-md dark:bg-slate-700 transition-color hover:bg-slate-200 dark:hover:bg-slate-600">
   <a href="{% url 'index:home' %}" role="button" class="block p-2 transition-all duration-700 dark:text-slate-200">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-full h-full" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-full h-full" fill="currentColor" viewBox="0 0 256 256">
+      <rect width="256" height="256" fill="none"></rect>
+      <path d="M152,208V160a8,8,0,0,0-8-8H112a8,8,0,0,0-8,8v48a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V115.5a8.3,8.3,0,0,1,2.6-5.9l80-72.7a8,8,0,0,1,10.8,0l80,72.7a8.3,8.3,0,0,1,2.6,5.9V208a8,8,0,0,1-8,8H160A8,8,0,0,1,152,208Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path>
     </svg>
   </a>
 </div>
