--- a/heidegger_index/templates/_group_by_lemma.html
+++ b/heidegger_index/templates/_group_by_lemma.html
@@ -5,7 +5,7 @@
   {% regroup ref_list by lemma as lemma_groups %}
   {% for lemma, page_ref_list in lemma_groups %}
     <li class="pl-4 -indent-4">
-      <a href="{% url 'index:lemma-detail' lemma.slug %}" class="{{ hidden_link_decoration_medium }}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
+      <a href="{% url 'index:lemma-detail' lemma.slug %}" class="{{ hidden_link_decoration_medium }}{% if lemma.type == "w" %} italic{% endif %}">{{ lemma }}</a>: {{ page_ref_list|join:', ' }}
     </li>
   {% endfor %}
 </ul>
