--- a/heidegger_index/templates/_lemma_list.html
+++ b/heidegger_index/templates/_lemma_list.html
@@ -5,7 +5,7 @@
   {% for lemma in lemma_list %}
     <li>
       <a href="{% url 'index:lemma-detail' lemma.slug %}" class="{{ hidden_link_decoration }}">
-        {{ lemma }}
+        <span class="{% if lemma.type == "w" %}italic{% endif %}">{{ lemma }}</span>
       </a>
     </li>
   {% endfor %}
