Add bibliography icon

--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -35,7 +35,7 @@
   {% endfor %}
 {% endfor %}
 
-<h2 class="mt-16 mb-8 text-3xl font-bold dark:text-white">Bibliography</h2>
+<h2 class="mt-16 mb-8 text-3xl font-bold dark:text-white" id="bibliography">Bibliography</h2>
 <div class="flex flex-col gap-8">
   {% for work in works %}
   {% if work.reference %}
