--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en" dir="ltr" class="scroll-smooth">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block full_head_title %}{% block head_title %}{% endblock %} – Heidegger index{% endblock %}</title>
-    <style>
-      html {
-        --scroll-behavior: smooth;
-      }
-    </style>
     <link rel="stylesheet" href="{% static 'styles.css' %}"/>
     {% include "_fonts.html" %}
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
