--- a/heidegger_index/templates/_toc.html
+++ b/heidegger_index/templates/_toc.html
@@ -1,21 +1,21 @@
 <div class="sticky w-screen mb-10 -ml-4 overflow-x-auto md:ml-0 md:w-auto top-6">
-  <div class="flex items-center justify-between gap-2 px-3 py-2 mx-4 mb-2 text-3xl rounded-md shadow md:mx-0 md:w-full md:gap-0 bg-slate-100 dark:bg-slate-600 dark:text-white w-fit">
+  <div class="flex items-center justify-between gap-1 px-3 py-2 mx-4 mb-2 text-3xl rounded-md shadow shrink-0 md:mx-0 md:w-full bg-slate-100 dark:bg-slate-600 dark:text-white w-fit">
 
   {% if alphabet.pre %}
   {% for letter in alphabet.pre %}
-    <a href="{% url 'index:home' %}?start={{ letter }}#{{ letter }}" class="transition-colors rounded-md md:px-1 hover:bg-slate-200 dark:hover:bg-slate-500">{{ letter }}</a>
+    <a href="{% url 'index:home' %}?start={{ letter }}#{{ letter }}" class="px-1 transition-colors rounded-md hover:bg-slate-200 dark:hover:bg-slate-500">{{ letter }}</a>
   {% endfor %}
   {% endif %}
 
-  <div class="rounded-md bg-slate-200 dark:bg-slate-500">
+  <div class="flex gap-1 rounded-md bg-slate-200 dark:bg-slate-500">
   {% for letter in alphabet.selected %}
-    <button onClick="scrollToWithOffset('{{ letter }}')" class="transition-colors rounded-md md:px-1 hover:bg-slate-300 dark:hover:bg-slate-400">{{ letter }}</button>
+    <button onClick="scrollToWithOffset('{{ letter }}')" class="px-1 transition-colors rounded-md hover:bg-slate-300 dark:hover:bg-slate-400">{{ letter }}</button>
   {% endfor %}
   </div>
 
   {% if alphabet.post %}
   {% for letter in alphabet.post %}
-    <a href="{% url 'index:home' %}?start={{ letter }}#{{ letter }}" class="transition-colors rounded-md md:px-1 hover:bg-slate-200 dark:hover:bg-slate-500">{{ letter }}</a>
+    <a href="{% url 'index:home' %}?start={{ letter }}#{{ letter }}" class="px-1 transition-colors rounded-md hover:bg-slate-200 dark:hover:bg-slate-500">{{ letter }}</a>
   {% endfor %}
   {% endif %}
 
